--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -123,14 +123,17 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
       - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ needs.bump-version.outputs.new_version }}
-          release_name: Release v${{ needs.bump-version.outputs.new_version }}
-          body: |
-            ${{ github.event.inputs.release_notes || format('Version {0}', needs.bump-version.outputs.new_version) }}
+          name: Release v${{ needs.bump-version.outputs.new_version }}
+          body: ${{ github.event.inputs.release_notes || '' }}
+          generate_release_notes: ${{ github.event.inputs.release_notes == '' }}
           draft: false
           prerelease: false
+          token: ${{ secrets.GITHUB_TOKEN }}
