--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,31 @@ description = "Integrates CodeLogic's powerful codebase knowledge graphs with a 
 readme = "README.md"
 license = "MPL-2.0"
 requires-python = ">=3.13"
-dependencies = [ "debugpy>=1.8.12", "httpx>=0.28.1", "mcp[cli]>=1.3.0", "pip-licenses>=5.0.0", "python-dotenv>=1.0.1", "tenacity>=9.0.0", "toml>=0.10.2",]
+dependencies = [ "debugpy>=1.8.12", "httpx>=0.28.1", "mcp[cli]>=1.3.0", "pip-licenses>=5.0.0", "python-dotenv>=1.0.1", "tenacity>=9.0.0", "toml>=0.10.2" ]
+keywords = ["codelogic", "mcp", "code-analysis", "knowledge-graph", "static-analysis"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Code Generators",
+    "Environment :: Console"
+]
+
 [[project.authors]]
 name = "garrmark"
 email = "mgarrison@codelogic.com"
 
+[project.urls]
+"Homepage" = "https://github.com/codelogictech/codelogic-mcp-server"
+"Bug Tracker" = "https://github.com/codelogictech/codelogic-mcp-server/issues"
+"Documentation" = "https://github.com/codelogictech/codelogic-mcp-server#readme"
+
 [build-system]
-requires = [ "hatchling",]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
