--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -58,6 +58,7 @@ jobs:
           import sys
           import re
           import os
+          import json
           
           # Read the current version
           with open("pyproject.toml", "r") as f:
@@ -100,6 +101,21 @@ jobs:
           with open("pyproject.toml", "w") as f:
               toml.dump(config, f)
               
+          # Update the version in server.json (both top-level and packages[].version)
+          try:
+              with open("server.json", "r") as f:
+                  server_config = json.load(f)
+              server_config["version"] = new_version
+              if isinstance(server_config.get("packages"), list):
+                  for pkg in server_config["packages"]:
+                      if isinstance(pkg, dict) and "version" in pkg:
+                          pkg["version"] = new_version
+              with open("server.json", "w") as f:
+                  json.dump(server_config, f, indent=2)
+                  f.write("\n")
+          except FileNotFoundError:
+              print("Warning: server.json not found; skipping update")
+
           print(f"New version: {new_version}")
           with open(os.environ["GITHUB_OUTPUT"], "a") as f:
               f.write(f"new_version={new_version}\n")
@@ -107,7 +123,7 @@ jobs:
           
       - name: Commit and push changes
         run: |
-          git add pyproject.toml
+          git add pyproject.toml server.json
           git commit -m "Bump version to ${{ steps.bump_version.outputs.new_version }}"
           git push
           
@@ -142,15 +158,29 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
         with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-message: |
-            :tada: *New Version Released!*
-            
-            *Package:* codelogic-mcp-server v${{ needs.bump-version.outputs.new_version }}
-            *Released by:* ${{ github.actor }}
-            
-            ${{ github.event.inputs.release_notes || '_No release notes provided._' }}
-            
-            :link: <${{ github.server_url }}/${{ github.repository }}/releases/tag/v${{ needs.bump-version.outputs.new_version }}|View Release on GitHub>
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          method: chat.postMessage
+          token: ${{ secrets.SLACK_BOT_TOKEN }}
+          payload-templated: true
+          payload: |
+            {
+              "channel": "${{ secrets.SLACK_CHANNEL_ID }}",
+              "text": "New Version Released: codelogic-mcp-server v${{ needs.bump-version.outputs.new_version }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {"type": "mrkdwn", "text": ":tada: *New Version Released!*"}
+                },
+                {
+                  "type": "section",
+                  "text": {"type": "mrkdwn", "text": "*Package:* codelogic-mcp-server v${{ needs.bump-version.outputs.new_version }}\n*Released by:* ${{ github.actor }}"}
+                },
+                {
+                  "type": "section",
+                  "text": {"type": "mrkdwn", "text": "${{ github.event.inputs.release_notes || '_No release notes provided._' }}"}
+                },
+                {
+                  "type": "section",
+                  "text": {"type": "mrkdwn", "text": ":link: <${{ github.server_url }}/${{ github.repository }}/releases/tag/v${{ needs.bump-version.outputs.new_version }}|View Release on GitHub>"}
+                }
+              ]
+            }
