--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -60,14 +60,11 @@ jobs:
       run: |
         curl -L "https://github.com/modelcontextprotocol/registry/releases/download/v1.0.0/mcp-publisher_1.0.0_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz mcp-publisher
 
-    - name: Validate server.json with MCP Publisher
-      run: ./mcp-publisher validate --file server.json
-
     - name: Login to MCP Registry (OIDC)
       run: ./mcp-publisher login github-oidc
 
     - name: Publish to MCP Registry
-      run: ./mcp-publisher publish --file server.json
+      run: ./mcp-publisher publish
         
     - name: Extract package version
       id: get_version
