--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "1.0.11"
 description = "Integrates CodeLogic's powerful codebase knowledge graphs with a Model Context Protocol (MCP) server"
 readme = "README.md"
 license = "MPL-2.0"
-requires-python = ">=3.13"
-dependencies = [ "debugpy>=1.8.12", "httpx>=0.28.1", "mcp[cli]>=1.3.0", "pip-licenses>=5.0.0", "python-dotenv>=1.0.1", "tenacity>=9.0.0", "toml>=0.10.2",]
+requires-python = ">=3.13,<3.15"
+dependencies = [ "debugpy>=1.8.12", "httpx>=0.28.1", "mcp[cli]>=1.4.0", "pip-licenses>=5.0.0", "python-dotenv>=1.0.1", "tenacity>=9.0.0", "toml>=0.10.2", "httpcore>=1.0.0", "anyio>=4.0.0",]
 keywords = [ "codelogic", "mcp", "code-analysis", "knowledge-graph", "static-analysis",]
 classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.13", "Topic :: Software Development", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Code Generators", "Environment :: Console",]
 [[project.authors]]
@@ -15,6 +15,14 @@ email = "mgarrison@codelogic.com"
 [build-system]
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "httpcore",
+]
+
+[tool.uv.sources]
+httpcore = { git = "https://github.com/encode/httpcore.git" }
 
 [project.urls]
 Homepage = "https://github.com/CodeLogicIncEngineering/codelogic-mcp-server"
