--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,19 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      env:
+        PIP_PROGRESS_BAR: off
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install uv
-        uv pip install --system -e ".[dev]"
-        python -m pip install flake8
+        python -m pip install --upgrade pip -q
+        python -m pip install uv -q
+        uv pip install --system -e ".[dev]" --quiet
+        python -m pip install flake8 -q
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=10 --statistics
+        # exit-zero treats all errors as warnings (quiet: only violations, no per-file stats)
+        flake8 . --count --exit-zero --max-complexity=10 --quiet
     - name: Test with unittest
       run: |
-        python -m unittest discover -s test -p "unit*.py" -v
+        python -m unittest discover -s test -p "unit*.py"
